<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.gentics.mesh</groupId>
	<artifactId>mesh</artifactId>
	<version>2.0.17-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>Gentics Mesh</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<projectRoot>${project.basedir}</projectRoot>
		<mesh.admin-ui.version>0.9.2</mesh.admin-ui.version>
		<mesh.admin-ui2.version>1.3.6</mesh.admin-ui2.version>

		<dagger.version>2.24</dagger.version>

		<!-- Tests -->
		<surefire.forkcount>1</surefire.forkcount>
		<surefire.jvm.postfix></surefire.jvm.postfix>
		<skip.unit.tests>false</skip.unit.tests>
		<skip.cluster.tests>false</skip.cluster.tests>
		<surefire.excludedGroups></surefire.excludedGroups>
		<surefire.groups></surefire.groups>
		<skip.vertx-hazelcast>true</skip.vertx-hazelcast>

		<!-- Jacoco -->
		<jacoco.skip.merge>true</jacoco.skip.merge>
		<jacoco.version>0.8.4</jacoco.version>
		<jacoco.skip>true</jacoco.skip>
		<jacoco.env></jacoco.env>

		<mesh.image.provider>mesh-service-image-imgscalr</mesh.image.provider>
		<mesh.build.timestamp>${maven.build.timestamp}</mesh.build.timestamp>
	</properties>

	<scm>
		<connection>scm:git:git@git.gentics.com:psc/mesh.git</connection>
		<developerConnection>scm:git:git@git.gentics.com:psc/mesh.git</developerConnection>
		<url>https://git.gentics.com/psc/mesh</url>
		<tag>HEAD</tag>
	</scm>

	<parent>
		<groupId>com.gentics.vertx</groupId>
		<artifactId>maven-vertx-parent</artifactId>
		<version>4.3.2.1</version>
	</parent>

	<developers>
	</developers>

	<organization>
		<name>Gentics Software</name>
		<url>http://www.gentics.com</url>
	</organization>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<inceptionYear>2014</inceptionYear>

	<modules>
		<module>bom</module>
		<module>changelog</module>
		<module>ferma</module>
		<module>rest-model</module>
		<module>api</module>
		<module>plugin-api</module>
		<module>plugin-bom</module>
		<module>plugin-dep</module>
		<module>plugin-parent</module>
		<module>common-api</module>
		<module>madl</module>
		<module>mdm</module>
		<module>common</module>
		<module>elasticsearch</module>
		<module>rest-client</module>
		<module>changelog-system</module>
		<module>databases</module>
		<module>services</module>
		<module>distributed</module>
		<module>distributed-coordinator</module>
		<module>core</module>
		<module>verticles</module>
		<module>server</module>
		<module>demo</module>
		<module>doc</module>
		<module>tests</module>
		<module>performance-tests</module>
        <module>hazelcast3-cluster-manager</module>
    </modules>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M5</version>
					<configuration>
						<skip>${skip.unit.tests}</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<failOnError>false</failOnError>
								<failOnWarnings>false</failOnWarnings>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco.version}</version>
					<executions>
						<execution>
							<id>merge-all-jacoco</id>
							<goals>
								<goal>merge</goal>
							</goals>
							<phase>install</phase>
							<configuration>
								<skip>${jacoco.skip.merge}</skip>
								<destFile>${project.build.directory}/jacoco.exec</destFile>
								<fileSets>
									<fileSet>
										<directory>${project.build.directory}</directory>
										<includes>
											<include>*.exec</include>
										</includes>
									</fileSet>
								</fileSets>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>com.gentics</groupId>
					<artifactId>changelog-manager-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-scm-plugin</artifactId>
				<version>1.8.1</version>
				<configuration>
					<tag>${project.artifactId}-${project.version}</tag>
				</configuration>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-gpg-plugin</artifactId>
				<executions> <execution> <id>sign-artifacts</id> <phase>verify</phase> <goals>
				<goal>sign</goal> </goals> </execution> </executions> </plugin> -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<skip>true</skip>
					<skipDeploy>true</skipDeploy>
					<generateReports>false</generateReports>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<verbose>false</verbose>
					<compilerVersion>11</compilerVersion>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<skip>${jacoco.skip}</skip>
							<propertyName>jacoco.env</propertyName>
							<destFile>${project.build.directory}/jacoco-partial.exec</destFile>
							<excludes>
								<exclude>*OrientSqlTokenManager*</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<skip>${skip.unit.tests}</skip>
					<jvm>${env.JAVA_HOME}/bin/java</jvm>
					<argLine>-Xms128m -Xmx256m -XX:MaxDirectMemorySize=128m
						-Dstorage.diskCache.bufferSize=128 ${jacoco.env}</argLine>
					<forkedProcessTimeoutInSeconds>2700</forkedProcessTimeoutInSeconds>
					<rerunFailingTestsCount>0</rerunFailingTestsCount>
					<reuseForks>false</reuseForks>
					<forkCount>${surefire.forkcount}</forkCount>
					<trimStackTrace>false</trimStackTrace>
					<useSystemClassLoader>false</useSystemClassLoader>
					<excludes>
						<include>**/*AbstractTest.java</include>
						<include>**/*Abstract*Test.java</include>
						<exclude>**/*Abstract*.java</exclude>
						<exclude>**/Abstract*.java</exclude>
					</excludes>
					<groups>${surefire.groups}</groups>
					<excludedGroups>${surefire.excludedGroups}</excludedGroups>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>maven.gentics.com</id>
			<name>Gentics Maven Repository</name>
			<url>https://maven.gentics.com/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>maven.gentics.com</id>
			<name>Gentics Maven Repository</name>
			<url>https://maven.gentics.com/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>lan.releases</id>
			<name>Gentics Releases Repository</name>
			<url>https://repo.apa-it.at/artifactory/gtx-maven-releases-staging-mesh</url>
		</repository>
		<snapshotRepository>
			<id>lan.snapshots</id>
			<name>Gentics Snapshots Repository</name>
			<url>https://repo.apa-it.at/artifactory/gtx-maven-snapshots-mesh</url>
		</snapshotRepository>
	</distributionManagement>
</project>
